5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1636_2449.log
== TEST (2019-04-17 13:54:15) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = c*e - b*f / a*e - b*d
y = a*f - c*d / a*e - b*d

if ((a*e - b*d) =! 0):
	
-- ERROR:
File "XXXX", line 11
    if ((a*e - b*d) =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:55:00) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = c*e - b*f / a*e - b*d
y = a*f - c*d / a*e - b*d

if (a*e - b*d =! 0):
	
-- ERROR:
File "XXXX", line 11
    if (a*e - b*d =! 0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:56:19) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = c*e - b*f / a*e - b*d
y = a*f - c*d / a*e - b*d

if (x =! 0) and (y =! 0):
	
-- ERROR:
File "XXXX", line 11
    if (x =! 0) and (y =! 0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:56:26) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = c*e - b*f / a*e - b*d
y = a*f - c*d / a*e - b*d

if ((x =! 0) and (y =! 0)):
	
-- ERROR:
File "XXXX", line 11
    if ((x =! 0) and (y =! 0)):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:56:41) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = c*e - b*f / a*e - b*d
y = a*f - c*d / a*e - b*d

if ((x != 0) and (y != 0)):
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:56:52) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = c*e - b*f / a*e - b*d
y = a*f - c*d / a*e - b*d

if ((x != 0) and (y != 0)):
-- ERROR:
File "XXXX", line 12
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
